Changelog
=========

0.9.12 - Unreleased
-------------------

0.9.11 - 2010-09-15
-------------------

- Install `plone.app.imaging` monkeypatches during test setup.
  [davisagli]

- Add layer support coming from zope.testrunner and removed from zope.testing
  [jfroche]

0.9.10 - 2010-07-13
-------------------

- Make compatible with Zope 2.13 and avoid setup problems with zope.schema
  vocabularies.
  [hannosch]

- Revert r100668 as the issue does not occur anymore.
  [stefan]

0.9.9 - 2009-11-14
------------------

- Folder created with _createObjectByType was being reported as having
  portal_type 'ATFolder' in portal_catalog. Reindexing it flips it to the
  correct 'Folder'.
  [esteele]

- Reset memoize RAMCaches on tear down.
  Fixes http://dev.plone.org/plone/ticket/9425
  [stefan]

- Install blob-enabled types from `plone.app.blob` during test setup.
  [witsch]

- Install the TinyMCE product during test runs.
  [hannosch]

- Add the sunburst theme to the default extension profiles for Plone 4.
  [davisagli]

- Specify dependencies in a backwards compatible way.
  [hannosch]

- Changed behavior of `default_extension_profiles`. We always add the default
  profiles now. You can still override this via passing in an explicit empty
  `default_extension_profiles` argument to the `setupPloneSite` function.
  [hannosch]

- Disentangle the product installation code for PLONE50 and before. The base
  amount of packages is quite different.
  [hannosch]

- Moved the Plone version determination code into its own module.
  [hannosch]

- Adjusted the PLONE40 constant to be PLONE50 and check for Plone trunk.
  [hannosch]

- In Plone trunk manually install the ATContentTypes default profile.
  [hannosch]

0.9.8 - 2009-04-16
------------------

- Protect against missing portal_quickinstaller tool.
  [hannosch]

- Fixed deprecation warnings for use of Globals.
  [hannosch]

- Adjusted _createHomeFolder to create the 'Members' folder if it isn't